--- a/IndianDiabetesDatabase_KNN.ipynb
+++ b/IndianDiabetesDatabase_KNN.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1I7R46ZUScisWBPG5gcfnitBQDacTr88j",
-      "authorship_tag": "ABX9TyN4+BHF3qyk+KFuXV2rityH",
+      "authorship_tag": "ABX9TyOzILAtN2IZXA3KNq5yO0yn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -380,9 +380,70 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "data.isnull().sum()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CXFDFP5N3V3b",
+        "outputId": "365296b9-b248-4841-c404-1f08ee46761c"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Pregnancies                 0\n",
+              "Glucose                     0\n",
+              "BloodPressure               0\n",
+              "SkinThickness               0\n",
+              "Insulin                     0\n",
+              "BMI                         0\n",
+              "DiabetesPedigreeFunction    0\n",
+              "Age                         0\n",
+              "Outcome                     0\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RMfyOGJDHU5f",
+        "outputId": "6cbbb5b0-468f-48f5-d0b2-7d7ec1c173a9"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(768, 9)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "CXFDFP5N3V3b"
+        "id": "fbN9TrQBHWrB"
       },
       "execution_count": null,
       "outputs": []
