--- a/IndianDiabetesDatabase_KNN.ipynb
+++ b/IndianDiabetesDatabase_KNN.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1I7R46ZUScisWBPG5gcfnitBQDacTr88j",
-      "authorship_tag": "ABX9TyNSdIQNVP8MjYTr2hSglIpn",
+      "authorship_tag": "ABX9TyOBxSFw+v6miwNVf8XsfLjL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "AsRLbSWCsG3b"
       },
@@ -53,9 +53,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w9u9_qjN2aWj",
-        "outputId": "2cc31268-d682-42f8-d1e7-709f6fa51f11"
+        "outputId": "960d5564-4e5b-47b4-be44-488484596541"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,9 +87,9 @@
           "height": 112
         },
         "id": "uKdN-Fw63HuF",
-        "outputId": "62e62634-e4de-47c1-e5fc-6c9a17e1cdeb"
+        "outputId": "df912e56-c5ae-4513-f569-9dcdd17cde32"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -105,7 +105,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-7eb9b560-891c-46f0-98f3-225b10a86a68\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-9a3216a4-16a4-4964-9f1c-74532933d4ad\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -166,7 +166,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7eb9b560-891c-46f0-98f3-225b10a86a68')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9a3216a4-16a4-4964-9f1c-74532933d4ad')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -218,12 +218,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-7eb9b560-891c-46f0-98f3-225b10a86a68 button.colab-df-convert');\n",
+              "        document.querySelector('#df-9a3216a4-16a4-4964-9f1c-74532933d4ad button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-7eb9b560-891c-46f0-98f3-225b10a86a68');\n",
+              "        const element = document.querySelector('#df-9a3216a4-16a4-4964-9f1c-74532933d4ad');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -243,8 +243,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-7577b28c-2b4e-4939-b075-b0da1583e6f2\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7577b28c-2b4e-4939-b075-b0da1583e6f2')\"\n",
+              "<div id=\"df-3a660bc4-abae-4a40-9ed3-fa96766c2e82\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3a660bc4-abae-4a40-9ed3-fa96766c2e82')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -363,7 +363,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-7577b28c-2b4e-4939-b075-b0da1583e6f2 button');\n",
+              "        document.querySelector('#df-3a660bc4-abae-4a40-9ed3-fa96766c2e82 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -374,7 +374,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 4
         }
       ]
     },
@@ -414,9 +414,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CXFDFP5N3V3b",
-        "outputId": "6b8caedd-e933-4052-d439-636bcc63d30b"
+        "outputId": "b403ea93-012b-46f8-dd18-b23aa6a1464d"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -435,7 +435,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 5
         }
       ]
     },
@@ -449,9 +449,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RMfyOGJDHU5f",
-        "outputId": "ed2e7aa9-3875-41c5-e96d-82aa46330082"
+        "outputId": "09a17609-100d-4c38-eaa7-2aed108fdf4a"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -461,7 +461,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 6
         }
       ]
     },
@@ -475,9 +475,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fbN9TrQBHWrB",
-        "outputId": "a6eab3b7-b529-4a2c-834e-953bec81681d"
+        "outputId": "812b3522-2ea7-4363-f4cd-fc2e6b5bd1c9"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -487,7 +487,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
@@ -505,9 +505,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QnbjQdJJ7AVu",
-        "outputId": "5d9052f5-8641-438d-c075-3f4f04f03d46"
+        "outputId": "385c7adb-d01f-4ee3-b05e-66cfae7d0851"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -543,7 +543,7 @@
       "metadata": {
         "id": "Dm5MIWOiOXrg"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -556,9 +556,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a_lRvz58Jl-v",
-        "outputId": "fcce9df9-b565-4df7-c27c-c6b3bee6b689"
+        "outputId": "0fcf782f-cf62-4cfc-9b7f-5f6e435a961c"
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -575,7 +575,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 10
         }
       ]
     },
@@ -590,9 +590,9 @@
           "height": 300
         },
         "id": "367CTPHHPo4o",
-        "outputId": "1ec8393e-e7d4-41bc-8ea8-f2ea8006ba77"
+        "outputId": "8f48d5c8-28d9-473d-f15e-d456b13c92c6"
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -620,7 +620,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5d962e30-8faa-42a6-9fce-95413dab3bf1\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-c0a54853-dbcc-4344-a0b2-432e49f7a5d9\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -735,7 +735,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5d962e30-8faa-42a6-9fce-95413dab3bf1')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c0a54853-dbcc-4344-a0b2-432e49f7a5d9')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -787,12 +787,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-5d962e30-8faa-42a6-9fce-95413dab3bf1 button.colab-df-convert');\n",
+              "        document.querySelector('#df-c0a54853-dbcc-4344-a0b2-432e49f7a5d9 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-5d962e30-8faa-42a6-9fce-95413dab3bf1');\n",
+              "        const element = document.querySelector('#df-c0a54853-dbcc-4344-a0b2-432e49f7a5d9');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -812,8 +812,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-aa32e31a-1ea5-460b-8867-c304a9b9d16d\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-aa32e31a-1ea5-460b-8867-c304a9b9d16d')\"\n",
+              "<div id=\"df-5d39d233-dca0-413c-91d5-10b7cafb3f38\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5d39d233-dca0-413c-91d5-10b7cafb3f38')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -932,7 +932,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-aa32e31a-1ea5-460b-8867-c304a9b9d16d button');\n",
+              "        document.querySelector('#df-5d39d233-dca0-413c-91d5-10b7cafb3f38 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -943,7 +943,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 11
         }
       ]
     },
@@ -967,19 +967,19 @@
           "height": 1000
         },
         "id": "P5BGVA8-JEDU",
-        "outputId": "9ed929a1-38c1-4ca2-de92-2f7a890ef12c"
+        "outputId": "43145c0d-8c38-4acc-f5b9-0b489205654c"
       },
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<seaborn.axisgrid.PairGrid at 0x7bd39e18b100>"
+              "<seaborn.axisgrid.PairGrid at 0x7ce16050c970>"
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 12
         },
         {
           "output_type": "display_data",
@@ -1007,9 +1007,9 @@
           "height": 597
         },
         "id": "o_5Htdw3JQdY",
-        "outputId": "ed2fe1e5-e818-4600-9f29-c82d12068073"
+        "outputId": "fbc9265c-96e8-4006-91da-5dbb34ebc0b5"
       },
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1024,12 +1024,87 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Modeling\n",
+        "\n",
+        "We will start with the train-test split\n",
+        "\n",
+        "1. Why do we need a train-test split?\n",
+        "  \n",
+        "  We need it to resolve the overfitting issue.\n",
+        "  * Let our hypothesis function be `h(.)` and our entire dataset be `D`\n",
+        "  * We split our `D` into 3 parts:\n",
+        "        * D<sub>tr</sub> will be our training data\n",
+        "        * D<sub>va</sub> will be our validation data\n",
+        "        * D<sub>te</sub> will be our test data\n",
+        "* The usual split is 80-10-10 between D<sub>tr</sub>-D<sub>va</sub>-D<sub>te</sub>\n",
+        "* We need a validation set because it helps us in validating our model against a dataset that closely resembles the test dataset"
+      ],
+      "metadata": {
+        "id": "DVwzt87UKQWp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "X = data.iloc[:,:-1]\n",
+        "y = data.iloc[:,-1:]\n",
+        "\n",
+        "# Splitting into train-test\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1,\n",
+        "                                                    random_state=42,\n",
+        "                                                    shuffle=True)\n",
+        "\n",
+        "# Splitting into train-val\n",
+        "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.1,\n",
+        "                                                    random_state=42,\n",
+        "                                                    shuffle=True)"
+      ],
+      "metadata": {
+        "id": "Dyowoc1urfEf"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Procedure of Machine Learning\n",
+        "\n",
+        "The general procedure of ML involves 2 steps:\n",
+        "1. Learning\n",
+        "2. Evaluation\n",
+        "\n",
+        "##### Learning:\n",
+        "Learning is the step where we choose our hypothesis function and fit it to the training dataset and try to minimize the loss. Mathematically it can be written as:\n",
+        "\n",
+        "$h^*(.) = argmin_{h \\in 𝚮} + \\frac{1}{\\mid D_{tr} \\mid} \\sum \\limits _{(x,y) \\in D_{tr} } l(x,y \\mid h(.))$\n",
+        "\n",
+        "where,<br>\n",
+        "$𝚮$ = the hypothesis class, a class where we have all our hypothesis functions that we want to try out. <br>\n",
+        "We basically try out a few hypothesis $h \\in 𝚮$ such that we choose the best possible hypothesis function  \n",
+        "\n",
+        "##### Evaluation\n",
+        "\n",
+        "$\\in_{te} = \\frac{1}{\\mid D_{te} \\mid}\\sum \\limits _{(x,y) \\in D_{te} } l(x,y \\mid h^*(.))$\n",
+        "\n",
+        "The thing about $\\in_{te}$ is that if the test data is from the same distribution as rest of the data then $\\in_{te}$ is an unbiased estimate of **generalization error**.\n",
+        "\n",
+        "Generalization $\\in = 𝚬_{(x,y) ∼ 𝚸}[l(x,y \\mid h^*(.))]$"
+      ],
+      "metadata": {
+        "id": "6Uuh20UKs4p0"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "DVwzt87UKQWp"
+        "id": "uboblCcYuwUV"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     }
   ]
