--- a/IndianDiabetesDatabase_KNN.ipynb
+++ b/IndianDiabetesDatabase_KNN.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1I7R46ZUScisWBPG5gcfnitBQDacTr88j",
-      "authorship_tag": "ABX9TyOBxSFw+v6miwNVf8XsfLjL",
+      "authorship_tag": "ABX9TyMGovO+w/KFP4WOZ6e1sg3H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "AsRLbSWCsG3b"
       },
@@ -53,9 +53,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w9u9_qjN2aWj",
-        "outputId": "960d5564-4e5b-47b4-be44-488484596541"
+        "outputId": "e9e4847b-db07-4ef0-aca4-d9d8066b7ff5"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -78,7 +78,7 @@
     {
       "cell_type": "code",
       "source": [
-        "data = pd.read_csv(\"/content/drive/MyDrive/Colab_Data/diabetes.csv\")\n",
+        "data = pd.read_csv(\"/content/drive/MyDrive/Colab_Data/diabetes.csv\", index_col=False)\n",
         "data.head(2)"
       ],
       "metadata": {
@@ -87,9 +87,9 @@
           "height": 112
         },
         "id": "uKdN-Fw63HuF",
-        "outputId": "df912e56-c5ae-4513-f569-9dcdd17cde32"
+        "outputId": "9f7b9b57-7d93-4fdd-8033-12ddfdb34c0d"
       },
-      "execution_count": 4,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -105,7 +105,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9a3216a4-16a4-4964-9f1c-74532933d4ad\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-4ec0ce27-2410-45c9-bc2f-c7c6c2493949\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -166,7 +166,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9a3216a4-16a4-4964-9f1c-74532933d4ad')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4ec0ce27-2410-45c9-bc2f-c7c6c2493949')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -218,12 +218,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-9a3216a4-16a4-4964-9f1c-74532933d4ad button.colab-df-convert');\n",
+              "        document.querySelector('#df-4ec0ce27-2410-45c9-bc2f-c7c6c2493949 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-9a3216a4-16a4-4964-9f1c-74532933d4ad');\n",
+              "        const element = document.querySelector('#df-4ec0ce27-2410-45c9-bc2f-c7c6c2493949');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -243,8 +243,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-3a660bc4-abae-4a40-9ed3-fa96766c2e82\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3a660bc4-abae-4a40-9ed3-fa96766c2e82')\"\n",
+              "<div id=\"df-57062fb2-77c1-4215-87ec-381aebd1317b\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-57062fb2-77c1-4215-87ec-381aebd1317b')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -363,7 +363,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-3a660bc4-abae-4a40-9ed3-fa96766c2e82 button');\n",
+              "        document.querySelector('#df-57062fb2-77c1-4215-87ec-381aebd1317b button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -374,7 +374,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 17
         }
       ]
     },
@@ -414,9 +414,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CXFDFP5N3V3b",
-        "outputId": "b403ea93-012b-46f8-dd18-b23aa6a1464d"
+        "outputId": "5e406152-1cc0-4350-858b-e07e437317f0"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -435,7 +435,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
@@ -449,9 +449,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RMfyOGJDHU5f",
-        "outputId": "09a17609-100d-4c38-eaa7-2aed108fdf4a"
+        "outputId": "6e7eda7f-bdb1-4ec6-ac57-e9354817cdca"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -461,7 +461,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 5
         }
       ]
     },
@@ -475,9 +475,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fbN9TrQBHWrB",
-        "outputId": "812b3522-2ea7-4363-f4cd-fc2e6b5bd1c9"
+        "outputId": "85352282-cbea-48a1-ef9e-8eb401363459"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -487,7 +487,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 6
         }
       ]
     },
@@ -505,9 +505,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QnbjQdJJ7AVu",
-        "outputId": "385c7adb-d01f-4ee3-b05e-66cfae7d0851"
+        "outputId": "05f43d2c-61fe-421d-b99f-f898588c5c7d"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -543,7 +543,7 @@
       "metadata": {
         "id": "Dm5MIWOiOXrg"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -556,9 +556,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a_lRvz58Jl-v",
-        "outputId": "0fcf782f-cf62-4cfc-9b7f-5f6e435a961c"
+        "outputId": "76eca683-f6de-4ac8-ac9e-e3d45795a21c"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -575,7 +575,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 9
         }
       ]
     },
@@ -590,9 +590,9 @@
           "height": 300
         },
         "id": "367CTPHHPo4o",
-        "outputId": "8f48d5c8-28d9-473d-f15e-d456b13c92c6"
+        "outputId": "11a87429-979a-4ccd-eced-041c5218b275"
       },
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -620,7 +620,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c0a54853-dbcc-4344-a0b2-432e49f7a5d9\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-cf971287-67ac-46c8-a861-2217b7bad86a\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -735,7 +735,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c0a54853-dbcc-4344-a0b2-432e49f7a5d9')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cf971287-67ac-46c8-a861-2217b7bad86a')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -787,12 +787,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-c0a54853-dbcc-4344-a0b2-432e49f7a5d9 button.colab-df-convert');\n",
+              "        document.querySelector('#df-cf971287-67ac-46c8-a861-2217b7bad86a button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-c0a54853-dbcc-4344-a0b2-432e49f7a5d9');\n",
+              "        const element = document.querySelector('#df-cf971287-67ac-46c8-a861-2217b7bad86a');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -812,8 +812,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-5d39d233-dca0-413c-91d5-10b7cafb3f38\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5d39d233-dca0-413c-91d5-10b7cafb3f38')\"\n",
+              "<div id=\"df-af95e764-741e-4ebd-8249-2325360f70d6\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-af95e764-741e-4ebd-8249-2325360f70d6')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -932,7 +932,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-5d39d233-dca0-413c-91d5-10b7cafb3f38 button');\n",
+              "        document.querySelector('#df-af95e764-741e-4ebd-8249-2325360f70d6 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -943,7 +943,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 10
         }
       ]
     },
@@ -967,19 +967,19 @@
           "height": 1000
         },
         "id": "P5BGVA8-JEDU",
-        "outputId": "43145c0d-8c38-4acc-f5b9-0b489205654c"
+        "outputId": "22f8b997-9966-4aab-9702-de98176433ca"
       },
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<seaborn.axisgrid.PairGrid at 0x7ce16050c970>"
+              "<seaborn.axisgrid.PairGrid at 0x79848d81a320>"
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 11
         },
         {
           "output_type": "display_data",
@@ -1007,9 +1007,9 @@
           "height": 597
         },
         "id": "o_5Htdw3JQdY",
-        "outputId": "fbc9265c-96e8-4006-91da-5dbb34ebc0b5"
+        "outputId": "fe50374e-220a-4f8a-ee17-95d8b19abe91"
       },
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1050,23 +1050,47 @@
       "source": [
         "from sklearn.model_selection import train_test_split\n",
         "X = data.iloc[:,:-1]\n",
-        "y = data.iloc[:,-1:]\n",
+        "y = data.iloc[:,-1]\n",
         "\n",
         "# Splitting into train-test\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1,\n",
-        "                                                    random_state=42,\n",
-        "                                                    shuffle=True)\n",
-        "\n",
-        "# Splitting into train-val\n",
-        "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.1,\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2,\n",
         "                                                    random_state=42,\n",
         "                                                    shuffle=True)"
       ],
       "metadata": {
         "id": "Dyowoc1urfEf"
       },
-      "execution_count": 32,
+      "execution_count": 21,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"Shape of Training feature space: {X_train.shape}\")\n",
+        "print(f\"Shape of Training label space: {y_train.shape}\")\n",
+        "print(f\"Shape of Testing feature space: {X_test.shape}\")\n",
+        "print(f\"Shape of Testing label space: {y_test.shape}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OzTopFKHAn_A",
+        "outputId": "9e302fe0-5602-43b1-a58c-398bc219ee9d"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Shape of Training feature space: (614, 8)\n",
+            "Shape of Training label space: (614,)\n",
+            "Shape of Testing feature space: (154, 8)\n",
+            "Shape of Testing label space: (154,)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1100,9 +1124,130 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.model_selection import cross_val_score\n",
+        "\n",
+        "model = KNeighborsClassifier(n_neighbors=5, weights=\"distance\", metric=\"minkowski\",\n",
+        "                             algorithm=\"brute\")\n",
+        "model.fit(X_train, y_train)\n",
+        "cv_scores = cross_val_score(model, X_train, y_train, cv=5)\n",
+        "print(cv_scores.mean())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "j2DFB0gO_kB-",
+        "outputId": "a0781523-55bd-495b-d5b8-51567b862389"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.7198987071837932\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.model_selection import cross_val_score\n",
+        "\n",
+        "model = KNeighborsClassifier(n_neighbors=5, weights=\"distance\", metric=\"minkowski\",\n",
+        "                             algorithm=\"kd_tree\", leaf_size=30)\n",
+        "model.fit(X_train, y_train)\n",
+        "cv_scores = cross_val_score(model, X_train, y_train, cv=5)\n",
+        "print(cv_scores.mean())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AS9Vc9KgEkbw",
+        "outputId": "965d63e7-676e-4240-885f-f93d40834687"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.7198987071837932\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.model_selection import cross_val_score\n",
+        "\n",
+        "model = KNeighborsClassifier(n_neighbors=5, weights=\"distance\", metric=\"minkowski\",\n",
+        "                             algorithm=\"ball_tree\")\n",
+        "model.fit(X_train, y_train)\n",
+        "cv_scores = cross_val_score(model, X_train, y_train, cv=5)\n",
+        "print(cv_scores.mean())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fJ5KFmY1E23n",
+        "outputId": "6155f266-1629-499e-f3b7-d36a846412d5"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.7198987071837932\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# KNN\n",
+        "We will implement KNN on this dataset<br>\n",
+        "\n",
+        "**Assumption about KNN**: similar inputs have similar outputs\n",
+        "Suppose we have a test point x and $S_{x}$ K-Nearest Neighbors, $S_{x}$ is defined as: <br>\n",
+        "$S_{x} ⊆ D$ such that $\\mid S_{x} \\mid = K$ where $\\mid S_{x} \\mid$ is the cardinality\n",
+        "\n",
+        "Now let us assume that we have a point (x', y') such that $∀(x', y') \\in D ∖ S_{x}$ that is, (x', y') is not a nearest neighbor\n",
+        "\n",
+        "the condition our KNN algorithm should fulfill so that we can define a classifier h(.) is:\n",
+        "\n",
+        "dist(x, x') $≥$ $max_{(x\", y\") \\in S_{x}}$ dist(x, x\")\n",
+        "\n",
+        "that is, the distance between our test point and this point that is not a nearest neighbor should be at least equal to or greater than the maximum distance amond our nearest neighbors"
+      ],
       "metadata": {
         "id": "uboblCcYuwUV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wp-uB0mQE1Wz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "e5PsgpRq_ij4"
       },
       "execution_count": null,
       "outputs": []
